Grid layout: basic integration in workspace

--- a/components/ab-grid/index.html
+++ b/components/ab-grid/index.html
@@ -1,4 +1,4 @@
-<polymer-element name="ab-grid" attributes="columns rows"
+<polymer-element name="ab-grid" attributes="columns rows removable resizable"
   on-dragstart="{{_dragStart}}" on-dragend="{{_dragEnd}}"
   on-dragover="{{_dragOver}}"
   on-mousedown="{{_startResizing}}" on-mouseup="{{_stopResizing}}"
