--- a/components/ab-widget/index.html
+++ b/components/ab-widget/index.html
@@ -5,10 +5,11 @@
       :host {
         display: block;
         width: 100%;
+        height: 100%;
         -moz-box-sizing: border-box;
         -webkit-box-sizing: border-box;
         box-sizing: border-box;
-        overflow: hidden;
+        overflow: auto;
       }
 
       :host #tabs {
@@ -53,7 +54,6 @@
     <div id="tabs">
       <b class="widgetName">{{name}}</b>
       <a id="viewTab" class="tab" on-click="{{showViewPane}}">View</a><a id="editTab" class="tab" on-click="{{showEditPane}}">Edit</a>
-      <a id="removeButton" on-click="{{dispatchRemoveClick}}">X</a>
     </div>
 
     <div id="panels">
@@ -90,12 +90,6 @@
         this.$.editTab.classList.remove('selected');
         this.$.viewTab.classList.add('selected');
         this.fire('showView');
-      },
-
-      dispatchRemoveClick: function() {
-        if(this.removable) {
-          this.fire('ab-widget-remove');
-        }
       }
 
 
