Update polymer elements style

--- a/components/ab-grid/index.html
+++ b/components/ab-grid/index.html
@@ -2,7 +2,7 @@
   on-dragstart="{{_dragStart}}" on-dragend="{{_dragEnd}}"
   on-dragover="{{_dragOver}}"
   on-mousedown="{{_startResizing}}" on-mouseup="{{_stopResizing}}"
-  on-mousemove="{{_resize}}" on-mouseleave="{{_stopResizing}}">
+  on-mousemove="{{_resize}}">
   <template>
     <link rel="stylesheet" type="text/css" href="style.css">
     <content id="content" select="*"></content>
