--- a/components/ab-grid/style.css
+++ b/components/ab-grid/style.css
@@ -4,7 +4,8 @@
   background: whiteSmoke;
 }
 
-:host > * {
+polyfill-next-selector { content: ':host > *'; }
+* ::content {
 
   display: block;
   position: absolute;
@@ -27,11 +28,13 @@
 
 }
 
-:host > .resizable, :host > .removable {
+polyfill-next-selector { content: ':host > .resizable, :host > .removable'; }
+::content .resizable, ::content > .removable {
   padding-right: 20px;
 }
 
-:host > .resizable::after {
+polyfill-next-selector { content: ':host > .resizable::after'; }
+::content .resizable::after {
   bottom: 3px;
   right: 3px;
   width: 8px;
@@ -45,7 +48,8 @@
   pointer-events: none;
 }
 
-:host > .removable::before {
+polyfill-next-selector { content: ':host > .removable::before'; }
+::content .removable::before {
   content: '✕';
   top: 2px;
   right: 2px;
@@ -58,7 +62,8 @@
   pointer-events: none;
 }
 
-:host > *.moving {
+polyfill-next-selector { content: ':host > *.moving'; }
+::content .moving {
   opacity: 0.7;
 }
 
@@ -83,7 +88,8 @@
   content: '';
 }
 
-[draggable] {
+polyfill-next-selector { content: ':host > [draggable]'; }
+::content [draggable] {
   -moz-user-select: none;
   -khtml-user-select: none;
   -webkit-user-select: none;
