--- a/components/ab-widgetslist/index.html
+++ b/components/ab-widgetslist/index.html
@@ -7,13 +7,10 @@
         display: block;
       }
     </style>
+
     <ul class="widgets-list">
-      <li class="widget" draggable="true" data-widget-type="WIDGET-TEXT">
-        Text
-      </li>
-      <li class="widget" draggable="true" data-widget-type="WIDGET-TIMELINE">
-        Timeline
-      </li>
+      <li class="widget" draggable="true" data-widget-type="WIDGET-TEXT">Text</li>
+      <li class="widget" draggable="true" data-widget-type="WIDGET-TIMELINE">Timeline</li>
     </ul>
 
   </template>
@@ -23,7 +20,7 @@
       widgetDragStart: function(evt) {
         var dataTransfer = evt.dataTransfer;
         dataTransfer.effectAllowed = 'move';
-        dataTransfer.setData('application/x-ab-widget', evt.srcElement.dataset.widgetType);
+        dataTransfer.setData('application/x-ab-widget', (evt.originalTarget || evt.srcElement).dataset.widgetType);
       }
 
     });
