--- a/components/ab-widgetslist/index.html
+++ b/components/ab-widgetslist/index.html
@@ -1,16 +1,42 @@
-<polymer-element name="ab-widgetslist"
-  on-dragstart="{{widgetDragStart}}">
+<polymer-element name="ab-widgetslist">
   <template>
 
     <style type="text/css">
+
       :host {
         display: block;
       }
+
+      #widgets-list {
+        display: block;
+        margin: 0;
+        padding: 0;
+        list-style: none;
+      }
+
+      #widgets-list > .widget {
+        display: block;
+        width: 100px;
+        height: 100px;
+        line-height: 100px;
+        text-align: center;
+        background: #ccc;
+        -webkit-border-radius: 2px;
+        border-radius: 2px;
+        margin-bottom: 5px;
+      }
+
     </style>
 
-    <ul class="widgets-list">
-      <li class="widget" draggable="true" data-widget-type="WIDGET-TEXT">Text</li>
-      <li class="widget" draggable="true" data-widget-type="WIDGET-TIMELINE">Timeline</li>
+    <ul id="widgets-list" on-dragstart="{{widgetDragStart}}">
+      <li class="widget" draggable="true"
+        data-widget-type="WIDGET-TEXT">
+        Text
+      </li>
+      <li class="widget" draggable="true"
+        data-widget-type="WIDGET-TIMELINE">
+        Timeline
+      </li>
     </ul>
 
   </template>
@@ -19,8 +45,8 @@
 
       widgetDragStart: function(evt) {
         var dataTransfer = evt.dataTransfer;
-        dataTransfer.effectAllowed = 'move';
-        dataTransfer.setData('application/x-ab-widget', (evt.originalTarget || evt.srcElement).dataset.widgetType);
+        dataTransfer.effectAllowed = 'copy';
+        dataTransfer.setData('application/x-ab-widget', evt.target.dataset.widgetType);
       }
 
     });
