--- a/style.css
+++ b/style.css
@@ -1,9 +1,16 @@
+* {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
 html, body {
   font-family: 'sans-serif';
-  color: #666;
-  padding: 0;
+  color: #333;
   margin: 0;
   height: 100%;
+  background-color: #f1f1f1;
+  padding: 5px 0px;
 }
 
 #container {
@@ -14,13 +21,11 @@ html, body {
 #menu {
   float: left;
   width: 250px;
-  border-right: 1px solid #ccc;
 }
 
 #widgets {
   float: right;
   width: 110px;
-  border-left: 1px solid #ccc;
   padding: 5px;
   font-size: 10px;
 }
@@ -32,20 +37,17 @@ html, body {
 .block {
   display: block;
   height: 100%;
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
-.view > * {
-  -webkit-transition: all 250ms linear;
-  -moz-transition: all 250ms linear;
-  -ms-transition: all 250ms linear;
-  -o-transition: all 250ms linear;
-  transition: all 250ms linear;
-}
-
-ab-widget #panels {
+  border: 1px solid #fff;
+  background-color: #fafafa;
+  -webkit-box-shadow: 0 0 1px 0 #333;
+  box-shadow: 0 0 1px 0 #333;
   padding: 5px;
+  margin: 0px 10px;
+}
+
+button {
+  display: block;
+  padding: 5px;
+  width: 100%;
 }
 
