--- a/components/ab-menu/index.html
+++ b/components/ab-menu/index.html
@@ -19,6 +19,12 @@
         border-bottom: 1px dashed #ccc;
       }
 
+      button {
+        display: block;
+        padding: 5px;
+        width: 100%;
+      }
+
     </style>
 
     <h1 id="title">AppBuilder</h1>
