--- a/style.css
+++ b/style.css
@@ -9,69 +9,12 @@ html, body {
   color: #333;
   margin: 0;
   height: 100%;
-  padding: 0;
+  padding: 10px;
 }
 
-.page-wrap {
-  display: -webkit-box;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-  height: 100%;
-}
-
-.main-sidebar, .main-nav {
-  background-color: #BBBBBB;
-  -webkit-box-shadow: 0 0 2px 2px #ddd;
-  -webkit-box-shadow: 0 0 5px 5px #ddd;
-  box-shadow: 0 0 5px 5px #ddd;
-  z-index: 10;
-  padding: 0 5px;
-}
-
-.main-content {
-  -webkit-box-flex: 1;
-  -moz-box-flex: 1;
-  -webkit-flex: 1;
-  -ms-flex: 1;
-  flex: 1;
-  -webkit-box-ordinal-group: 2;
-  -moz-box-ordinal-group: 2;
-  -ms-flex-order: 2;
-  -webkit-order: 2;
-  order: 2;
-  background-color: #f7f7f7;
-  padding: 0 5px;
-}
-
-.main-nav {
-  width: 250px;
-  -webkit-box-ordinal-group: 1;
-  -moz-box-ordinal-group: 1;
-  -ms-flex-order: 1;
-  -webkit-order: 1;
-  order: 1;
-}
-
-.main-sidebar {
-  width: 120px;
-  -webkit-box-ordinal-group: 3;
-  -moz-box-ordinal-group: 3;
-  -ms-flex-order: 3;
-  -webkit-order: 3;
-  order: 3;
-}
 
 button {
   border: none;
-
-}
-
-#widgets {
-  width: 110px;
-  padding: 5px;
-  font-size: 10px;
 }
 
 ab-grid > * {
@@ -82,5 +25,60 @@ ab-grid > * {
 
 #workspace {
   overflow: auto;
+  width: 100%;
+  height: 100%;
+}
+
+#widgets, #settings {
+  position: fixed;
+  z-index: 10;
+}
+
+#widgets {
+  left: -150px;
+  top: 20px;
+  width: 150px;
+  background-color: #A9DA88;
+}
+
+#widgets:target {
+  left: 0px;
+}
+
+#widgets .tab {
+
+  display: block;
+  background-color: #A9DA88;
+
+  position: absolute;
+  right: -60px;
+  top: 20px;
+
+  height: 40px;
+  line-height: 40px;
+  width: 80px;
+
+  -moz-transform: rotate(90deg);
+  -webkit-transform: rotate(90deg);
+  -o-transform: rotate(90deg);
+  -ms-transform: rotate(90deg);
+  transform: rotate(90deg);
+  
+  text-align: center;
+  -webkit-border-radius: 10px 10px 0 0;
+  border-radius: 10px 10px 0 0;
+  cursor: pointer;
+  text-decoration: none;
+  font-style: bold;
+}
+
+
+
+.transition {
+  -webkit-transition: all 250ms ease-in-out;
+  -moz-transition: all 250ms ease-in-out;
+  -ms-transition: all 250ms ease-in-out;
+  -o-transition: all 250ms ease-in-out;
+  transition: all 250ms ease-in-out;
 }
 
