--- a/components/ab-widget/index.html
+++ b/components/ab-widget/index.html
@@ -25,7 +25,7 @@
 
       #modal button {
         border: none;
-        background-color: rgb(0, 112, 255);
+        background-color: #92B3D4;
         border-radius: 10px;
         color: white;
         font-size: 14px;
