--- a/components/ab-grid/ab-grid.html
+++ b/components/ab-grid/ab-grid.html
@@ -1,4 +1,4 @@
-<polymer-element name="ab-grid" attributes="columns rows removable resizable"
+<polymer-element name="ab-grid" attributes="columns rows removable resizable movable"
   on-dragstart="{{_dragStart}}" on-dragend="{{_dragEnd}}" on-dragover="{{_dragOver}}"
   on-mousedown="{{_startResizing}}" on-mouseup="{{_stopResizing}}" on-mousemove="{{_resize}}"
   on-click="{{_removeElement}}">
