--- a/components/ab-settings/ab-settings.html
+++ b/components/ab-settings/ab-settings.html
@@ -1,4 +1,4 @@
-<polymer-element name="ab-appsettings">
+<polymer-element name="ab-settings">
   <template>
     <ab-filesystem id="fs"></ab-filesystem>
 
@@ -29,7 +29,7 @@
 
   </template>
   <script>
-    Polymer('ab-appsettings', {
+    Polymer('ab-settings', {
 
       app: null
 
