--- a/components/ab-workspace/ab-workspace.html
+++ b/components/ab-workspace/ab-workspace.html
@@ -7,12 +7,12 @@
     <style type="text/css">
 
       :host {
-        display: block;
+        display: -webkit-flex;
+        display: flex;
       }
 
       #grid {
-        width: 100%;
-        height: 100%;
+        flex: 1;
         background:url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAJElEQVQYV2O8e/duPQMaUFZWbkQXYxwKCtEdDeJjczfjEFAIADBCI3luyESPAAAAAElFTkSuQmCC) repeat;
       }
 
