--- a/style.css
+++ b/style.css
@@ -11,16 +11,16 @@
 
 html, body {
   font-family: 'Droid Sans', 'Ubuntu Sans', 'sans serif';
-  color: #444;
+  color: #333;
   margin: 0;
   height: 100%;
   padding: 5px 5px 5px 25px;
   background-color: #506C91;
-}
 
-
-button {
-  border: none;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-direction: column;
+  flex-direction: column;
 }
 
 ab-grid > * {
@@ -31,13 +31,11 @@ ab-grid > * {
 
 #workspace {
   overflow: auto;
-  width: 100%;
-  height: 100%;
   background-color: #FEFEFE;
+  flex: 1;
 }
 
 #widgets,
-#start,
 #settings {
   position: fixed;
   z-index: 10;
@@ -46,41 +44,30 @@ ab-grid > * {
 }
 
 #widgets #tab,
-#start #tab,
 #settings #tab {
   background-color: #BDD6EA;
 }
 
 #widgets:target,
-#start:target,
 #settings:target {
   left: 0px;
   background-color: #D5EDFF;
 }
 
 #widgets:target #tab,
-#start:target #tab,
 #settings:target #tab {
   background-color: #D5EDFF;
 }
 
-
-
-#start {
-  left: -250px;
-  top: 20px;
-  width: 250px;
-}
-
 #widgets {
   left: -280px;
-  top: 105px;
+  top: 75px;
   width: 280px;
 }
 
 #settings {
   left: -250px;
-  top: 214px;
+  top: 180px;
   width: 250px;
 }
 
