Base librairie de fichiers + gallerie

--- a/components/ab-app/ab-app.html
+++ b/components/ab-app/ab-app.html
@@ -1,4 +1,4 @@
-<link rel="import" href="../../bower_components/polymer-ajax/polymer-ajax.html">
+<link rel="import" href="../../bower_components/core-ajax/core-ajax.html">
 <link rel="import" href="../ab-grid/ab-grid.html">
 <link rel="import" href="../ab-app-utils/ab-app-utils.html">
 <polymer-element name="ab-app" attributes="manifestUrl">
@@ -12,9 +12,9 @@
         height: 100%;
       }
     </style>
-    <polymer-ajax auto url="{{manifestUrl}}" 
+    <core-ajax auto url="{{manifestUrl}}"
       on-polymer-response="{{handleResponse}}" handleAs="json">
-    </polymer-ajax>
+    </core-ajax>
     <ab-app-utils id="utils"></ab-app-utils>
     <ab-grid id="grid" resizable="false" removable="false" movable="false"></ab-grid>
   </template>
