--- a/components/index.html
+++ b/components/index.html
@@ -3,3 +3,4 @@
 <link rel="import" href="ab-tab-panel/ab-tab-panel.html">
 <link rel="import" href="ab-menu/ab-menu.html">
 <link rel="import" href="ab-settings/ab-settings.html">
+<link rel="import" href="ab-library/ab-library.html">
