--- a/components/ab-tab-panel/ab-tab-panel.html
+++ b/components/ab-tab-panel/ab-tab-panel.html
@@ -56,6 +56,10 @@
 
       }
 
+      #panel {
+        overflow: auto;
+      }
+
     </style>
 
     <div id="panel" style="min-height: {{minHeight}}px">
