--- a/style.css
+++ b/style.css
@@ -36,7 +36,8 @@ ab-grid > * {
 }
 
 #widgets,
-#settings {
+#settings,
+#library {
   position: fixed;
   z-index: 10;
   padding: 10px 5px 5px 50px;
@@ -44,30 +45,43 @@ ab-grid > * {
 }
 
 #widgets #tab,
-#settings #tab {
+#settings #tab,
+#library #tab {
   background-color: #BDD6EA;
 }
 
 #widgets:target,
-#settings:target {
+#settings:target,
+#library:target {
   left: 0px;
   background-color: #D5EDFF;
 }
 
 #widgets:target #tab,
-#settings:target #tab {
+#settings:target #tab,
+#library:target #tab {
   background-color: #D5EDFF;
 }
 
 #widgets {
-  left: -280px;
   top: 75px;
   width: 280px;
+  left: -280px;
 }
 
 #settings {
-  left: -250px;
   top: 180px;
   width: 250px;
+  left: -250px;
 }
 
+#library {
+  top: 283px;
+  width: 480px;
+  left: -480px;
+
+}
+
+#library ab-library {
+  min-height: 360px;
+}
