--- a/js/templates/_navbar.html
+++ b/js/templates/_navbar.html
@@ -1,12 +1,12 @@
 <nav class="navbar navbar-default navbar-static-top">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">
-        <a class="navbar-brand" href="#">AppBuilder</a>
+      <a class="navbar-brand">
+        <a href class="navbar-brand">AppBuilder</a>
       </a>
     </div>
     <div class="collapse navbar-collapse">
-      <button type="button" class="btn btn-default navbar-btn">Enregistrer</button>
+      <button type="button" class="btn btn-default navbar-btn" ng-click="saveApp()">Enregistrer</button>
     </div>
   </div>
 </nav>
