--- a/js/templates/_navbar.html
+++ b/js/templates/_navbar.html
@@ -6,6 +6,7 @@
       </a>
     </div>
     <div class="collapse navbar-collapse">
+      <button type="button" class="btn btn-default navbar-btn" ng-click="openApp()">Ouvrir</button>
       <button type="button" class="btn btn-default navbar-btn" ng-click="saveApp()">Enregistrer</button>
     </div>
   </div>
