--- a/js/templates/layout.html
+++ b/js/templates/layout.html
@@ -7,7 +7,7 @@
       <ng-include src="'js/templates/_widgets-list.html'"></ng-include>
     </div>
     <div class="col-md-8" ng-controller="WorkspaceCtrl" ab-drop>
-      <ab-page grid-opts="gridOpts" page="currentPage"></ab-page>
+      <ab-page ng-if="currentPage" grid-opts="gridOpts" page="currentApp.pages[currentPage]"></ab-page>
     </div>
     <div class="col-md-2">
       <ng-include src="'js/templates/_widget-config.html'"></ng-include>
