Add base resources system

--- a/js/templates/layout.html
+++ b/js/templates/layout.html
@@ -6,10 +6,12 @@
     <div class="col-md-2">
       <ab-tabs-container>
         <ab-tab label="Widgets">
+          <br />
           <ng-include src="'js/templates/_widgets-list.html'"></ng-include>
         </ab-tab>
         <ab-tab label="Resources">
-          <p>Resources</p>
+          <br />
+          <ab-resources></ab-resources>
         </ab-tab>
       </ab-tabs-container>
     </div>
